<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_40"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.fajar.reisenote.activities.ReiseEditActivity"
    tools:ignore="MissingPrefix"
    tools:showIn="@layout/activity_reise_add">

    <EditText
        android:id="@+id/reise_add_title"
        fontPath="fonts/candy.otf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/enter_the_title_here"
        android:maxLength="80"
        android:textSize="@dimen/textsize_70"

        android:transitionName="simple_title_animation"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/reise_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reise_add_title"

        android:layout_marginTop="@dimen/size_20"
        android:background="@android:color/transparent"
        android:hint="@string/here_goes_your_description"
        android:textSize="@dimen/textsize_14" />

    <Button
        android:id="@+id/btn_select_activity"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_50"
        android:layout_below="@id/reise_add_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_20"
        android:onClick="selectActivity"
        android:text="@string/choose_image" />

    <TextView
        android:id="@+id/tv_retrive"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_50"
        android:layout_below="@id/btn_select_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_15"
        android:hint="@string/uploadfirst"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/image_load2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/tv_retrive"
        android:layout_margin="@dimen/size_15" />

</RelativeLayout>
