<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/back_buttonUpload"
            android:layout_width="@dimen/size_25"
            android:layout_height="@dimen/size_25"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back_image" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_load"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="@dimen/size_15"
            app:srcCompat="@mipmap/ic_dummy" />

        <Button
            android:id="@+id/btn_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:text="@string/select_btn" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_5"
            android:text="@string/upload_btn" />
    </LinearLayout>

</android.support.design.widget.AppBarLayout>

