<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/activity_reise_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/size_150"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@android:color/black">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#da000000"
            android:padding="@dimen/size_20">

            <TextView
                android:id="@+id/filter_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_50"
                android:text="@string/filter"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/textsize_18" />

            <ImageView
                android:id="@+id/clear_filter_button"
                android:layout_width="@dimen/size_20"
                android:layout_height="@dimen/size_20"
                android:layout_alignBottom="@+id/filter_id"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/filter_id"
                android:layout_marginLeft="@dimen/size_30"
                android:layout_marginStart="@dimen/size_30"
                android:contentDescription="@string/clears_filter"
                android:src="@drawable/ic_clear" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/filter_id"
                android:layout_marginTop="@dimen/size_20" />

            <Button
                android:id="@+id/filter_apply_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_35"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_stroke"
                android:contentDescription="@string/filter_apply_button"
                android:text="@string/apply"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_14" />
        </RelativeLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
